2004-11-03  Jan Nieuwenhuizen  <janneke@gnu.org>

	* site/download/getting-started.html (Usage): Update to 2.4
	syntax.  Run indent-region, HTML fixes.  Avoid using `here' for
	link names.

2004-11-02  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/download/using.html (href): upgrade to 2.4

2004-10-31  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/switch/index.html (href): rephrase.

2004-10-30  Graham Percival  <gperlist@shaw.ca>

	* site/about/thanks.html: added bio.

2004-10-30  Jan Nieuwenhuizen  <janneke@gnu.org>

	* site/devel/packaging.html (href): Update Cygwin description.

2004-10-30  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/devel/participating/editors.html: new page.

	* site/devel/participating/feature-page.html (href): new page
	

	* site/devel/participating/call-for-help.html: revise, split out
	tasks.
	
2004-10-29  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/switch/advantages.html (src): revise.

	* site/download/index.html: add SUSE 2.0, 2.2

	* scripts/format-page.py: restrict eval with {}. 

	* site/about/automated-engraving/typography-features.html: add
	ledger lines example.

	* site/images/computer-totaal.jpeg (Module): new file.

	* site/about/thanks.html (Module): mention devel team.

	* site/images/sarabande.png (Module): 2.3 version.

	* site/switch/advantages.html (Module): revise

	* site/about/pubs.html (href): add computer totaal scan. (Thanks,
	Mars!)

	* site/graphics/: new directory. Edit SVG images with inkscape
	0.39

2004-10-25  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/download/index.html: change path to fedora-3

2004-10-23  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/index.html: add uwaterloo mirror link.

2004-09-23  Jan Nieuwenhuizen  <janneke@gnu.org>

	* site/about/index.html: Comment-out text/plain notice.

2004-09-11  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* site/about/faq.html (Han-Wen): update answers regarding latex.

2004-09-07  Jan Nieuwenhuizen  <janneke@gnu.org>
