@@ -5,13 +5,22 @@
 <p>
 Three good reasons to sponsor LilyPond development: 
 <ul>
-<li>Without sponsors, we have to pursue other work to feed ourselves
-and our families, and will have less time to improve LilyPond.
+<li>More sponsors means more time for LilyPond.
+<p>
+Without sponsors, we have to pursue other work to feed ourselves and
+our families, and will have less time to improve LilyPond.
 
-<li>With your support, we can support your needs, your platform and
-your wishes!
+<li>With your support, we can support you.
 
-<li>Helping us helps others! Every improvement made for you will be
+<p>
+With a donation, your platform, your needs, your platform, your
+wishes, your feature-requests and your bug-reports will get extra
+attention.
+
+<li>Everyone benefits.
+
+<p>
+Helping us helps others, since every improvement made for you will be
 passed on to the rest of the user community.
 
 </ul>
