@@ -1,3 +1,7 @@
+2004-11-05  Han-Wen Nienhuys  <hanwen@xs4all.nl>
+
+	* site/about/doneet.html: update donations page.
+
 2004-11-03  Jan Nieuwenhuizen  <janneke@gnu.org>
 
 	* site/download/getting-started.html (Usage): Update to 2.4
